# polycephalous-instances

./: .gitignore  README.md  polycephalous-instances.cabal
src/Language/Haskell/Polycephaly/: TH.hs  Typecast.hs  Utils.hs
src/Language/Polycephaly/: TH.hs  Typecast.hs  Utils.hs
tests/: tests.hs
tests/Polycephaly/: TH.hs
