name:                polycephalous-instances
version:             0.1.0.0
synopsis:            Distinguish class instances based on context
-- description:         
homepage:            https://github.com/jkarni/polycephalous-instances
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     TH
  other-modules:       Typecast 
  other-extensions:    MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleInstances
                     , UndecidableInstances
  build-depends:       base >=4 && <5
                     , transformers >=0.3 && <0.4
                     , template-haskell >=2.8 && <2.9
                     , containers >=0.5 && <0.6
                     , syb >=0.4 && <0.5
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
  
