name:                polycephalous-instances
version:             0.1.0.0
synopsis:            Distinguish class instances based on context
-- description:         
homepage:            https://github.com/jkarni/polycephalous-instances
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Language.Haskell.Polycephaly.TH
  other-modules:       Language.Haskell.Polycephaly.Typecast 
                     , Language.Haskell.Polycephaly.Utils
  other-extensions:    MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleInstances
                     , UndecidableInstances
  build-depends:       base >=4.7 && <4.8
                     , transformers >=0.3 && <0.4
                     , template-haskell >=2.9 && <2.10
                     , containers >=0.5 && <0.6
                     , syb >=0.4 && <0.5
  hs-source-dirs:      src
  
  default-language:    Haskell2010
  
Test-Suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base >= 4 && <5
                     , polycephalous-instances
                     , th-alpha>= 0.1 && <0.2
                     , template-haskell 
                     , tasty>= 0.8
                     , tasty-hunit
  default-language:    Haskell2010
